--- a/index.html
+++ b/index.html
@@ -3529,7 +3529,7 @@ td {
                                 <strong>Hosting Environment:</strong> AWS Commercial (US-East)
                             </div>
                             <div class="trust-item">
-                                <strong>Evidence Repository:</strong> <a href="https://github.com/Meridian-Knowledge-Solutions/fedramp_20x_public_submission-live" target="_blank" class="trust-link">GitHub Public Repo</a>
+                                <strong>Evidence Repository:</strong> <a href="https://github.com/Meridian-Knowledge-Solutions/fedramp-20x-public" target="_blank" class="trust-link">GitHub Public Repo</a>
                             </div>
                             <div class="trust-item">
                                 <strong>Validation Data:</strong> 
@@ -4046,7 +4046,7 @@ td {
                 <pre style="background: var(--bg-accent); padding: 15px; border-radius: 6px; overflow-x: auto; border: 1px solid var(--border-color);">
 // Fetch current SCN classification status
 async function getSCNStatus() {
-    const base = 'https://meridian-knowledge-solutions.github.io/fedramp_20x_public_submission-live';
+    const base = 'https://meridian-knowledge-solutions.github.io/fedramp-20x-public';
     
     // Get current SCN classification
     const scnResponse = await fetch(`${base}/scn_automation/scn_classification.json`);
@@ -5391,7 +5391,7 @@ ${ksi.assertion_reason || 'No detailed reason provided'}
 Please provide guidance on how to address this ${ksi.status === 'failed' ? 'compliance failure' : ksi.status === 'warning' ? 'low risk finding' : 'improvement opportunity'}.`);
 
             const labels = statusLabels[ksi.status] || 'general-compliance';
-            const githubUrl = `https://github.com/Meridian-Knowledge-Solutions/fedramp_20x_public_submission-live/issues/new?title=${issueTitle}&body=${issueBody}&labels=${labels}`;
+            const githubUrl = `https://github.com/Meridian-Knowledge-Solutions/fedramp-20x-public/issues/new?title=${issueTitle}&body=${issueBody}&labels=${labels}`;
             window.open(githubUrl, '_blank');
         }
 
